--- a/rwa/hw1/z1/index.html
+++ b/rwa/hw1/z1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HW1</title>
+    <title>Video voting competition</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -12,9 +12,9 @@
         <div class="header-right">
           <a class="active" href="index.html">Home</a>
           <a href="#">Voting</a>
-          <a href="#">Rankings</a>
+          <a href="rankings.html">Rankings</a>
         </div>
-      </div>
+    </div>
 
     <div class="container">
         <div class="video">
@@ -59,6 +59,61 @@
         </div>
         <div class="video">
             <p>LZN</p>
+            <iframe src="https://www.youtube.com/embed/yO5KCAgcQ-w" frameborder="0"></iframe>
+            <button class="vote">Vote</button>
+        </div>
+        <div class="video">
+            <p>LZN</p>
+            <iframe src="https://www.youtube.com/embed/qXlEvG6Vuz0" frameborder="0"></iframe>
+            <button class="vote">Vote</button>
+        </div>
+        <div class="video">
+            <p>LZN</p>
+            <iframe src="https://www.youtube.com/embed/s5vNM-8sDhk" frameborder="0"></iframe>
+            <button class="vote">Vote</button>
+        </div>
+        <div class="video">
+            <p>LZN</p>
+            <iframe src="https://www.youtube.com/embed/GgkASKg4fcE" frameborder="0"></iframe>
+            <button class="vote">Vote</button>
+        </div>
+        <div class="video">
+            <p>LZN</p>
+            <iframe src="https://www.youtube.com/embed/qb9craaTuPI" frameborder="0"></iframe>
+            <button class="vote">Vote</button>
+        </div>
+        <div class="video">
+            <p>LZN</p>
+            <iframe src="https://www.youtube.com/embed/wiMcIXihIlU" frameborder="0"></iframe>
+            <button class="vote">Vote</button>
+        </div>
+        <div class="video">
+            <p>LZN</p>
+            <iframe src="https://www.youtube.com/embed/5FnCqdGsnB4" frameborder="0"></iframe>
+            <button class="vote">Vote</button>
+        </div>
+        <div class="video">
+            <p>LZN</p>
+            <iframe src="https://www.youtube.com/embed/uJThEnfd_Xo" frameborder="0"></iframe>
+            <button class="vote">Vote</button>
+        </div>
+        <div class="video">
+            <p>LZN</p>
+            <iframe src="https://www.youtube.com/embed/TSHEgUGw5rU" frameborder="0"></iframe>
+            <button class="vote">Vote</button>
+        </div>
+        <div class="video">
+            <p>LZN</p>
+            <iframe src="https://www.youtube.com/embed/vYwlo0gYF80" frameborder="0"></iframe>
+            <button class="vote">Vote</button>
+        </div>
+        <div class="video">
+            <p>LZN</p>
+            <iframe src="https://www.youtube.com/embed/yO5KCAgcQ-w" frameborder="0"></iframe>
+            <button class="vote">Vote</button>
+        </div>
+        <div class="video">
+            <p>LZN</p>
             <iframe src="https://www.youtube.com/embed/qXlEvG6Vuz0" frameborder="0"></iframe>
             <button class="vote">Vote</button>
         </div>
@@ -99,7 +154,7 @@
             <div class="top5row">
                 <img src="https://img.youtube.com/vi/uJThEnfd_Xo/0.jpg" alt=""></img>
                 <p class="headline">Lud Zbunjen Normalan</p>
-                <p class="votes">(1/10)</p>
+                <p class="votes">(4/10)</p>
                 <p class="rank">5</p>
             </div>
         </div>
