Initial rwa hw2 jsp/servlet implementation

--- a/rwa/hw1/z1/index.html
+++ b/rwa/hw1/z1/index.html
@@ -16,107 +16,29 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="voting" >
+        <div class="video" style="float:left; padding: 0% 5%">
+            <p>LZN</p>
+            <iframe src="https://www.youtube.com/embed/s5vNM-8sDhk" frameborder="0"></iframe>
+            <button class="vote">Vote</button>
+        </div>
+        <div class="video" style="float:right; padding: 0% 5%">
+            <p>LZN</p>
+            <iframe src="https://www.youtube.com/embed/GgkASKg4fcE" frameborder="0"></iframe>
+            <button class="vote">Vote</button>
+        </div>
+    </div>
+    <!-- <div class="voting" style="float:right">
         <div class="video">
             <p>LZN</p>
             <iframe src="https://www.youtube.com/embed/s5vNM-8sDhk" frameborder="0"></iframe>
             <button class="vote">Vote</button>
         </div>
-        <div class="video">
+        <!-- <div class="video">
             <p>LZN</p>
             <iframe src="https://www.youtube.com/embed/GgkASKg4fcE" frameborder="0"></iframe>
             <button class="vote">Vote</button>
-        </div>
-        <div class="video">
-            <p>LZN</p>
-            <iframe src="https://www.youtube.com/embed/qb9craaTuPI" frameborder="0"></iframe>
-            <button class="vote">Vote</button>
-        </div>
-        <div class="video">
-            <p>LZN</p>
-            <iframe src="https://www.youtube.com/embed/wiMcIXihIlU" frameborder="0"></iframe>
-            <button class="vote">Vote</button>
-        </div>
-        <div class="video">
-            <p>LZN</p>
-            <iframe src="https://www.youtube.com/embed/5FnCqdGsnB4" frameborder="0"></iframe>
-            <button class="vote">Vote</button>
-        </div>
-        <div class="video">
-            <p>LZN</p>
-            <iframe src="https://www.youtube.com/embed/uJThEnfd_Xo" frameborder="0"></iframe>
-            <button class="vote">Vote</button>
-        </div>
-        <div class="video">
-            <p>LZN</p>
-            <iframe src="https://www.youtube.com/embed/TSHEgUGw5rU" frameborder="0"></iframe>
-            <button class="vote">Vote</button>
-        </div>
-        <div class="video">
-            <p>LZN</p>
-            <iframe src="https://www.youtube.com/embed/vYwlo0gYF80" frameborder="0"></iframe>
-            <button class="vote">Vote</button>
-        </div>
-        <div class="video">
-            <p>LZN</p>
-            <iframe src="https://www.youtube.com/embed/yO5KCAgcQ-w" frameborder="0"></iframe>
-            <button class="vote">Vote</button>
-        </div>
-        <div class="video">
-            <p>LZN</p>
-            <iframe src="https://www.youtube.com/embed/qXlEvG6Vuz0" frameborder="0"></iframe>
-            <button class="vote">Vote</button>
-        </div>
-        <div class="video">
-            <p>LZN</p>
-            <iframe src="https://www.youtube.com/embed/s5vNM-8sDhk" frameborder="0"></iframe>
-            <button class="vote">Vote</button>
-        </div>
-        <div class="video">
-            <p>LZN</p>
-            <iframe src="https://www.youtube.com/embed/GgkASKg4fcE" frameborder="0"></iframe>
-            <button class="vote">Vote</button>
-        </div>
-        <div class="video">
-            <p>LZN</p>
-            <iframe src="https://www.youtube.com/embed/qb9craaTuPI" frameborder="0"></iframe>
-            <button class="vote">Vote</button>
-        </div>
-        <div class="video">
-            <p>LZN</p>
-            <iframe src="https://www.youtube.com/embed/wiMcIXihIlU" frameborder="0"></iframe>
-            <button class="vote">Vote</button>
-        </div>
-        <div class="video">
-            <p>LZN</p>
-            <iframe src="https://www.youtube.com/embed/5FnCqdGsnB4" frameborder="0"></iframe>
-            <button class="vote">Vote</button>
-        </div>
-        <div class="video">
-            <p>LZN</p>
-            <iframe src="https://www.youtube.com/embed/uJThEnfd_Xo" frameborder="0"></iframe>
-            <button class="vote">Vote</button>
-        </div>
-        <div class="video">
-            <p>LZN</p>
-            <iframe src="https://www.youtube.com/embed/TSHEgUGw5rU" frameborder="0"></iframe>
-            <button class="vote">Vote</button>
-        </div>
-        <div class="video">
-            <p>LZN</p>
-            <iframe src="https://www.youtube.com/embed/vYwlo0gYF80" frameborder="0"></iframe>
-            <button class="vote">Vote</button>
-        </div>
-        <div class="video">
-            <p>LZN</p>
-            <iframe src="https://www.youtube.com/embed/yO5KCAgcQ-w" frameborder="0"></iframe>
-            <button class="vote">Vote</button>
-        </div>
-        <div class="video">
-            <p>LZN</p>
-            <iframe src="https://www.youtube.com/embed/qXlEvG6Vuz0" frameborder="0"></iframe>
-            <button class="vote">Vote</button>
-        </div>
+        </div> -->
     </div>
 
     <div id="rankings">
